@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+07-Nov-2002
+~~~~~~~~~~~
+Set hint to make panels appear on all workspaces (Laurent Moussault).
+
 05-Nov-2002
 ~~~~~~~~~~~
 Added Bookmarks toolbar icon (Liav).
